frontoffice/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontoffice-service
  namespace: microservices
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "80"
spec:
  selector:
    app: frontoffice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backoffice-service
  namespace: microservices
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "80"
spec:
  selector:
    app: backoffice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
