frontoffice/frontoffice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontoffice-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: frontoffice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontoffice-service
            port:
              number: 80
